--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Cadriciel\Scripts\StartScreenManager.cs" />
      <Compile Include="Assets\Custom\Scripts\Accelerable.cs" />
      <Compile Include="Assets\Custom\Scripts\Accelerator.cs" />
+     <Compile Include="Assets\DebugSpeedP1.cs" />
      <Compile Include="Assets\Sample Assets\2D\Scripts\Camera2DFollow.cs" />
      <Compile Include="Assets\Sample Assets\2D\Scripts\CameraFollow.cs" />
      <Compile Include="Assets\Sample Assets\2D\Scripts\Platformer2DUserControl.cs" />
