--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -55,10 +55,10 @@
      <Compile Include="Assets\Custom\Scripts\Accelerable.cs" />
      <Compile Include="Assets\Custom\Scripts\Accelerator.cs" />
      <Compile Include="Assets\Custom\Scripts\Destructible.cs" />
-     <Compile Include="Assets\Custom\Scripts\Healable.cs" />
      <Compile Include="Assets\Custom\Scripts\Healing.cs" />
      <Compile Include="Assets\Custom\Scripts\Rotator.cs" />
      <Compile Include="Assets\Custom\Scripts\SpeedText.cs" />
+     <Compile Include="Assets\HPText.cs" />
      <Compile Include="Assets\Sample Assets\2D\Scripts\Camera2DFollow.cs" />
      <Compile Include="Assets\Sample Assets\2D\Scripts\CameraFollow.cs" />
      <Compile Include="Assets\Sample Assets\2D\Scripts\Platformer2DUserControl.cs" />
